fix invite result

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -141,7 +141,7 @@
 	  <div class="col-xs-6">
 	    <p><font style="font-size:10px">电脑领取链接:</font><br><font style="font-size:11px">http://t.cn/R78QNv4</font></p>
 	    <p><font style="font-size:10px">手机领取链接:</font><br><font style="font-size:11px">http://t.cn/R78Qi3f</font></p>
-	    <p><a style="font-size:10px">其他领取方式 >></a></p>
+	    <p><a style="font-size:10px" href="/weixin/couponrule/">其他领取方式 >></a></p>
 	  </div>
 	</div>
 	<p style="font-size:10px"><font style="color:#d9534f">温馨提示</font>：您也可联系微信客服索要优惠券链接，及咨询其他问题。</p>
