--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -130,8 +130,8 @@
 	    </div>
 	  </div>
 	  <div class="col-xs-6">
-	    <p><font style="font-size:10px">电脑领取链接:</font><br><font style="font-size:11px">http://t.cn/R78QNv4</font></p>
-	    <p><font style="font-size:10px">手机领取链接:</font><br><font style="font-size:11px">http://t.cn/R78Qi3f</font></p>
+	    <p><font style="font-size:10px">电脑领取链接:</font><br><font style="font-size:11px">http://t.cn/R7ByOer</font></p>
+	    <p><font style="font-size:10px">手机领取链接:</font><br><font style="font-size:11px">http://t.cn/R7ByayL</font></p>
 	    <p><a style="font-size:10px" href="/weixin/couponrule/">其他领取方式 >></a></p>
 	  </div>
 	</div>
