deal with oct events finalist

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -6,6 +6,15 @@
 
 <div class="container-fluid">
 
+  {% if oct_passed %}
+  <div class="panel panel-default" style="margin-top:5px">
+    <div class="panel-heading" style="color:orange">十月活动 100元免单</div>
+    <div class="panel-body">
+      <p>亲，您具有100元免单资格！</p>
+      <p style="color:red">请在今晚0:00 - 4:00拍下支付您所需的产品！</p>
+    </div>
+  </div>
+  {% endif %}
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">十一月 感恩季</div>
     <div class="panel-body">
