--- a/shopmanager/shopapp/asynctask/templates/asynctask/print/invoice_qiyue_template.html
+++ b/shopmanager/shopapp/asynctask/templates/asynctask/print/invoice_qiyue_template.html
@@ -44,7 +44,7 @@ body {
 	margin: 0.5cm 0.5cm;
 	font-family: simhei;
 	-pdf-frame-border: 0;
-	-pdf-outline: true;
+         
     -pdf-level: 0;
     -pdf-open: false;
 	border:0;
@@ -55,6 +55,7 @@ body {
 		margin-right: 0.50cm;
 		height: 1cm;
 		font-family: simhei;
+                background-color:white;
 	}
 	@frame footer {
 		-pdf-frame-content: footerContent;
@@ -63,6 +64,7 @@ body {
 		margin-right: 1cm;
 		height: 1.5cm;
 		font-family: simhei;
+                background-color:white;
 	}
 }
 
@@ -86,6 +88,7 @@ td {
 	height: 1056px;
 	margin: 0px;
 	padding: 0px;
+        background-color:white;
 }
 
 .header {
@@ -102,6 +105,7 @@ td {
 	margin: 0px;
 	padding:0px;
 	font-size:14px;
+        background-color:white;
 }
 
 .right-label {
@@ -136,6 +140,7 @@ td {
 
 .memo-style {
 	font-size: 30px;
+        background-color:white;
 }
 
 .order_num {
@@ -146,13 +151,17 @@ td {
 	text-decoration: underline;
 	text-align: center;
 }
+
+#footerContent{
+        background-color:white;
+}
 </style>
 </head>
 <body>
 	{% load custom_filter %}
 	{% for trade in trade_list %}
-	<div id="delivery" class='delivery' >
-		<div class='seller-nick'>
+	<div id="delivery" class="delivery" >
+		<div class="seller-nick">
 			<h1>{{ trade.ins.user.nick }} [发货单]</h1>
 		</div> 
 		<div id="baseInfo">付款打单日期:{{ trade.ins.pay_time.month }}.{{ trade.ins.pay_time.day }}/{{ trade.today.month }}.{{ trade.today.day }}</div>
