--- a/shopmanager/shopapp/weixin/templates/weixin/refundapply.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/refundapply.html
@@ -7,7 +7,10 @@
       <option value="10">请选择</option>
 <!--      <option value="0">朋友圈晒单</option> -->
       {% if passed %}
+      <option value="4">100元免单</option>
+<!--
       <option value="1">VIP 邀请</option>
+-->
       {% else%}
       {% if score_passed %}
       <option value="2">10积分换购</option>
@@ -25,7 +28,7 @@
   <div class="col-xs-12">
     <input id="id_trade_id" type="hidden" value="{{ tradedata.tradeid }}"/>{% csrf_token %}
     {% if passed %}
-    <input id="id_code" class="form-control" type="text" placeholder="您的专属VIP邀请码"/>
+    <input id="id_code" class="form-control" type="hidden" value="100" placeholder="您的专属VIP邀请码"/>
     {% else %}
     {% if score_passed %}
     <input id="id_code" type="hidden" class="form-control" type="text" value="111111" placeholder="您的专属VIP邀请码"/>
