fix fix freesample

--- a/shopmanager/shopapp/weixin/templates/weixin/survey.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/survey.html
@@ -1,6 +1,6 @@
 {% extends "weixin/weixin_base.html" %}
 
-{% block title %} 免费试用 {% endblock %}
+{% block title %} 积分换购 {% endblock %}
 
 
 {% block container %}
@@ -8,13 +8,12 @@
 <div class="container-fluid">
 
   <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading" style="color:#e8792a">十月积分（5折）换购投票</div>
+    <div class="panel-heading" style="color:#e8792a">十一月积分（5折）换购投票</div>
     <div class="panel-body">
-      <p style="color:#029fd6">十月积分换购第二波，您想5折换走哪个系列的宝贝呢？投票就送积分哦！</p>
-
+      <p style="color:#029fd6">十一月积分换购第一波，您想5折换走哪个系列的宝贝呢？投票就送积分哦！</p>
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 style="color:#e8792a">选择一：婴幼儿法兰绒抱被</h5>
+	  <h5 style="color:#e8792a">选择一：婴幼儿</h5>
 	</div>
       </div>
       <div class="row">
