fix requirement and weixin survey

--- a/shopmanager/shopapp/weixin/templates/weixin/survey.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/survey.html
@@ -1,6 +1,6 @@
 {% extends "weixin/weixin_base.html" %}
 
-{% block title %} 积分换购 {% endblock %}
+{% block title %}优尼世界特卖活动 喊你投票啦！{% endblock %}
 
 
 {% block container %}
