--- a/shopmanager/templates/admin/base_site.html
+++ b/shopmanager/templates/admin/base_site.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
 
-{% block title %}{{ title }} | {% trans "互一云计算电商软件" %}{% endblock %}
+{% block title %}{{ title }} | {% trans "齐悦云电商软件" %}{% endblock %}
 
 {% block extrastyle %}
 <style>
@@ -15,7 +15,7 @@ a.section:link, a.section:visited { color: #666666; }
 {% endblock %}
 
 {% block branding %}
-<h1 id="site-name" > {% trans "互一云计算电商软件" %}</h1>
+<h1 id="site-name" > {% trans "齐悦云电商软件" %}</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
