--- a/shopmanager/flashsale/supplier/templates/product_detail.html
+++ b/shopmanager/flashsale/supplier/templates/product_detail.html
@@ -6,36 +6,59 @@
 {% endblock %}
 
 {% block container %}
+
 <div class="container">
   <div class="row">
     <div class="col-xs-4">
       <div class="thumbnail">
-	<a href="{{ record.product_link }}" target="_blank">
-	  <img src="{{ record.pic_url }}">
+	<a href="{{ product_link }}" target="_blank">
+	  <img src="{{ pic_url }}">
 	</a>
       </div>
     </div>
     <div class="col-xs-4">
-      <p>{{ record.title }}</p>
-      <p>售价: <font style="color:red" id="id-price-{{ forloop.counter }}">{{ record.price }}</font></p>
-      <p>商家: {{ record.sale_supplier.supplier_name }}</p>
-      <p>平台: {{ record.platform }}</p>
-      <p>类别: {{ record.sale_category.name }}</p>
-      <p>创建时间: {{ record.created }}</p>
+      <p>{{ title }}</p>
+      <p>售价: <font style="color:red" id="id-price-1">{{ price }}</font></p>
+      <p>商家: {{ sale_supplier.supplier_name }}</p>
+      <p>平台: {{ platform }}</p>
+      <p>类别: {{ sale_category.name }}</p>
+      <p>创建时间: {{ created }}</p>
     </div>
     <div class="col-xs-4">
-      <p>指导价: <font style="color:red;font-size:20px" id="id-target-price-{{ forloop.counter }}"></font></p>
+      <p>指导价: <font style="color:red;font-size:20px" id="id-target-price-1"></font></p>
       <p style="margin-top:10px">审核结果：</p>
-      <select class="form-control input" id="id-select-{{ forloop.counter}}">
+      <select class="form-control input" id="id-select-1">
 	<option value="0">拒绝</option>
 	<option value="1">通过</option>
       </select>
-      <button type="button" class="btn btn-warning" style="margin-top:20px" onclick="screen({{ record.id }}, '{{ forloop.counter }}')";>确定</button>
-
+      <button type="button" class="btn btn-warning" style="margin-top:20px" onclick="screen({{ id }}, '1')";>确定</button>
     </div>
   </div>
 </div>
 
 {% endblock %}
 
+{% block tail_script %}
+    <script type="text/javascript">
+      function finalize(id, counter) {
+        var buyPrice = parseFloat($("#id-buy-price").val());
+
+        if (isNaN(buyPrice) || buyPrice < 0) {
+          $("#id-msg")[0].innerHTML = "请输入进货价：";
+          $("#id-msg").css("color","red");
+          return;
+        }
+        var selection = $("#id-select-"+counter).val();
+        var url = "/flashsale/supplier/product/"+id+"/";
+        var callback = function (res) {
+          if (res["status"] != "wait") {
+            $("#id-item-"+id).slideUp();
+          }
+        };
+
+        var data = {"status": selection};
+        $.ajax({url:url,data:data,success:callback,method:"patch"});
+      };
+    </script>
+{% endblock %}
     
