--- a/shopmanager/flashsale/supplier/templates/product_screen.html
+++ b/shopmanager/flashsale/supplier/templates/product_screen.html
@@ -95,6 +95,7 @@
 	</div>
 	<div class="col-xs-4">
 	  <p>指导价: <font style="color:red;font-size:20px" id="id-target-price-{{ forloop.counter }}">{{ record.price|mul:1.5}}</font></p>
+	  <p id="id-msg">进货价：<input id="id-buy-price" class="form-control" placeholder="进货价(必须)" value="{{ record.sale_price }}"></p>
 	  <p style="margin-top:10px">审核结果：</p>
 	  <select class="form-control input" id="id-select-{{ forloop.counter}}">
 	    <option value="rejected">拒绝</option>
@@ -121,6 +122,15 @@
 {% block tail_script %}
     <script type="text/javascript">
       function screen(id, counter) {
+      
+      	 var buyPrice = parseFloat($("#id-buy-price").val());
+
+        if (isNaN(buyPrice) || buyPrice < 0) {
+          $("#id-msg")[0].innerHTML = "请输入进货价：";
+          $("#id-msg").css("color","red");
+          return;
+        }
+        
         var selection = $("#id-select-"+counter).val();
         var url = "/flashsale/supplier/product/"+id+"/";
         var callback = function (res) {
@@ -130,7 +140,7 @@
         };
         
       var csrf_token = document.getElementsByName("csrfmiddlewaretoken")[0].value;
-      var data = {"status": selection,"csrfmiddlewaretoken":csrf_token,};
+      var data = {"status": selection,"csrfmiddlewaretoken":csrf_token,"sale_price":buyPrice };
         
       var headers = {
 	    'X-HTTP-Method-Override': 'PATCH'
