--- a/shopmanager/shopapp/examination/templates/examination/exam_index.html
+++ b/shopmanager/shopapp/examination/templates/examination/exam_index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap2.3.2.min.css">
     <script src="/static/jquery/jquery-1.8.13.min.js"></script>
     <script>
-    function exam_index(paper_id,problem_count){
+    function exam_index(paper_id,problem_count,questionKind){
     $.ajax({
             url:'/app/examination/examination_user/',
-            data:{paper_id:paper_id,problem_count:problem_count},
+            data:{paper_id:paper_id,problem_count:problem_count,questionKind:questionKind,},
             success:function() {  console.log('ok'); }
             });
     };
@@ -27,14 +27,14 @@
         alert("最多只能{{ problem_len }}道题")
         }
     else{
-        exam_index('{{ paper_id }}',x);
+        exam_index('{{ paper_id }}',x,questionKind);
     }
     };
     </script>
   </head>
 <body background-color="#66FFFF">
 <div style="width:80%; padding:1%; margin:1% auto; text-align:center;" >
-<h1 style=" text-align:center;color:#FF0066;">妈妈微信答题</h1>
+<h1 style=" text-align:center;color:#FF0066;">答题</h1>
 
 <table class="table table-striped table-bordered table-condensed" >
 <thead>
@@ -64,6 +64,9 @@
 <th style=" text-align:center;color:#3366FF;"><b>为你准备的考试题数</b></th>
 </tr>
 </thead>
+</br>
+</br>
+
 <tbody>
 <tr>
 <td style=" text-align:center;">
@@ -76,12 +79,25 @@
 另一种上传数据的办法 over-->
 
 <!--scriptsubmint-->
+<!--
+<form>
+<select name="questionKind">
+<option value="exam_index">Select</option>
+<option value="essayQ/exam_essayQ_admin">Essay</option>
+</select>
+</form>
+-->
 <form name="form_b">
+<select name="questionKind" value="{{ questionKind }}">
+<option value="selectP" >Select</option>
+<option value="essayQ" {{ select }}>Essay</option>
+</select>
 <input type="hidden" name="problem_count" value="{{ problem_count }}">
 <input type="hidden" name="paper_id" value="{{ paper_id }}" />
 <input type="text" id="problem_count" style="width:10%;color:red" name="problem_count" value="{{ problem_count }}">
 <input type="submit" style="color:white;background:#3366FF;border:solid 0px" onclick="isNaNf()" value="更新一下">
 </form>
+
 <!--scriptsubmint over-->
 </td>
 </tr>
@@ -94,6 +110,7 @@
 <input type="hidden" name="user" value="{{ user }}">
 <input type="hidden" name="p_id" value="{{ p_id }}">
 <input type="hidden" name="problem_count" value="{{ problem_count }}">
+<input type="hidden" name="questionKind" value="{{ questionKind }}">
 
 <div style="margin-top:20%; text-align:center; margin-bottom:10%;">
 <input type="submit"  value="答题" style="color:white;background:#FF9900;border:solid 0px">
