--- a/shopmanager/shopapp/examination/templates/examination/selectP/exam_selectP_admin.html
+++ b/shopmanager/shopapp/examination/templates/examination/selectP/exam_selectP_admin.html
@@ -7,31 +7,27 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap2.3.2.min.css">
     <script src="/static/jquery/jquery-1.8.13.min.js"></script>
     <script>
-    function writeselect(exam_selected,id,paper_id){
+    function writeselect(exam_selected,id,paper_id,questionKind){
     $.ajax({
             url:'/app/examination/write_select_paper/',
-            data:{exam_selected:exam_selected,id:id,paper_id:paper_id},
+            data:{exam_selected:exam_selected,id:id,paper_id:paper_id,questionKind:questionKind},
             success:function() {  console.log('ok'); }
             });
     };
 
-    function userinfor(paper_id,p_id){
+    function userinfor(paper_id,p_id,questionKind){
     $.ajax({
             url:'/app/examination/examination_user/',
-            data:{paper_id:paper_id,p_id:p_id},
+            data:{paper_id:paper_id,p_id:p_id,questionKind:questionKind,},
             success:function() {  console.log('ok'); }
             });
     };
     </script>
   </head>
 <body background="#66FFFF">
-    <div style="width:80%; padding:1%; margin:1% auto; text-align:center;" >
+<div style="width:80%; padding:1%; margin:1% auto; text-align:center;" >
 <div>
-<h2 style=" text-align:center;color:#FF0066;">妈妈微信考试喽--选择题</h2>
-<!--
-<p>答题用户ID：<u>{{ user }}</u></p>
-<p>卷：<u>{{ paper_id }}</u></p>
--->
+<h2 style=" text-align:center;color:#FF0066;">考试喽--选择题</h2>
 </div>
 <table class="table table-striped table-bordered table-condensed" >
 <thead>
@@ -46,10 +42,10 @@
 <tr>
 <td  width="" >
 <form name="form1" style="color:red;text-align:left"> 
-<input type="radio" name="1" id="1" onclick="writeselect('A','{{ problem.id }}','{{ paper_id }}');" >A {{ problem.option_a }}<br><br>
-<input type="radio" name="1" id="2" onclick="writeselect('B','{{ problem.id }}','{{ paper_id }}');" >B {{ problem.option_b }}<br><br>
-<input type="radio" name="1" id="3" onclick="writeselect('C','{{ problem.id }}','{{ paper_id }}');" >C {{ problem.option_c }}<br><br>
-<input type="radio" name="1" id="4" onclick="writeselect('D','{{ problem.id }}','{{ paper_id }}');" >D {{ problem.option_d }}
+<input type="radio" name="1" id="1" onclick="writeselect('A','{{ problem.id }}','{{ paper_id }}','{{ questionKind }}');" >A {{ problem.option_a }}<br><br>
+<input type="radio" name="1" id="2" onclick="writeselect('B','{{ problem.id }}','{{ paper_id }}','{{ questionKind }}');" >B {{ problem.option_b }}<br><br>
+<input type="radio" name="1" id="3" onclick="writeselect('C','{{ problem.id }}','{{ paper_id }}','{{ questionKind }}');" >C {{ problem.option_c }}<br><br>
+<input type="radio" name="1" id="4" onclick="writeselect('D','{{ problem.id }}','{{ paper_id }}','{{ questionKind }}');" >D {{ problem.option_d }}
 </form>
 </td>
 </tr>
@@ -61,6 +57,7 @@
 <input type="hidden" name="problem_list" value="{{ problem_l_get }}">
 <input type="hidden" name="problem_l" value="{{ problem_l }}">
 <input type="hidden" name="problem_count" value="{{ problem_count }}">
+<input type="hidden" name="questionKind" value="{{ questionKind }}">
 <div style="margin-top:10%; text-align:center; margin-bottom:10%;">
 <input type="submit"  value="继续" style="color:white;background:#FF9900;border:solid 0px">
 </div>
