--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -8,16 +8,21 @@
 <div class="container-fluid">
 
 <div class="panel panel-default" style="margin-top:5px"> 
-  <div class="panel-heading" style="color:orange">十一月活动：感恩的思考</div>
+  <div class="panel-heading" style="color:orange">十二月：超值特卖</div>
   <div class="panel-body">
+    <p style="color:red">12月25日 10:00 特卖防风抱被 限量50件！ <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203021007&idx=1&sn=7bab410c22935cd6e94ee867854f353b&scene=1&key=2f5eb01238e84f7eccbffcb7302fe79fc0308b18f55b03dff952e0843d8cc98d50ef6db694815eca1f8703914ca83174&ascene=1&uin=MjE3MjYxNTA0MQ%3D%3D&devicetype=webwx&version=70000001&pass_ticket=RjgcZfi50Qi%2F5ymKmDW3hFf3n33iLN00S4LcxXVsdB8nvAmY3O5sGooi%2BIK8S8DO">查看详情>></a></p>
+    <p style="color:red">12月29日 10:00 特卖羽绒外套 限量50件！ <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203021007&idx=2&sn=cddb8fcbb69e9fc56e275d7f010e1784&scene=1&key=2f5eb01238e84f7eca54426ea636c62fa9292c8643941103e4750a46c82efbe7f9c6dd9c9d1d128b94392a074aec27c2&ascene=1&uin=MjE3MjYxNTA0MQ%3D%3D&devicetype=webwx&version=70000001&pass_ticket=RjgcZfi50Qi%2F5ymKmDW3hFf3n33iLN00S4LcxXVsdB8nvAmY3O5sGooi%2BIK8S8DO">查看详情>></a></p>
+<!--
     <p style="color:red">十一月，感恩的季节！</p>
     <p>曾经帮助过我们的人，还记得吗？</p>
     <p style="color:orange">不能抑制感恩的心，决定要送您一份礼物，感谢您曾经使用我的F码。</p>
     <p>感恩他人，就是善待自己。</p>
     <a class="btn btn-danger" href="/weixin/inviteresult/">点击发送感恩礼包 >></a>
+-->
   </div>
 </div>
 
+<!--
 <div class="panel panel-default" style="margin-top:5px"> 
   <div class="panel-heading" style="color:red">感恩礼包 免费包邮寄到家!</div>
   <div class="panel-body">
@@ -76,6 +81,7 @@
   </div>
   
 </div>
+-->
 
 <div class="row">
   <div class="col-xs-12">
@@ -89,9 +95,11 @@
 <div class="row">
   <div class="col-xs-12">
     <h5 style="color:#3071a9">常见问题</h5>
+<!--
     <p>1) 查看F码使用次数，<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/inviteresult/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点这里>></a></p>
     <p>2) 积分换F码使用次数，<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/scoremenu/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">请点这里>></a></p>
     <p>3) F码在哪里? <font style="color:red">在您看到的微信帖子里面, 请阅读寻找！也可向申请过的朋友索要F码。</font></p>
+-->
     <p>4) 我收不到手机验证码? <font style="color:red">微信中输入0，根据提示操作。若一份钟没收到短信验证码，可以重复。</font></p>
     <p>5) 哪些人无需邀请码申请？<font style="color:red">在10月1日之前关注优尼世界的微信粉丝，或者曾经提交过试用申请的粉丝，都无需输入F码！</font></p>
   </div>
