--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -7,11 +7,12 @@
 <div class="container-fluid">
 
   <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading" style="color:orange">十一月 感恩季</div>
+    <div class="panel-heading" style="color:orange">十二月 特卖季</div>
     <div class="panel-body">
       <div class="row">
 	<div class="col-xs-12">
-          <p style="color:red">感恩大礼包活动已结束，下期活动即将来袭...</p>
+          <p style="color:red">12月25日 10:00 特卖防风抱被 限量50件！ <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203021007&idx=1&sn=7bab410c22935cd6e94ee867854f353b&scene=1&key=2f5eb01238e84f7eccbffcb7302fe79fc0308b18f55b03dff952e0843d8cc98d50ef6db694815eca1f8703914ca83174&ascene=1&uin=MjE3MjYxNTA0MQ%3D%3D&devicetype=webwx&version=70000001&pass_ticket=RjgcZfi50Qi%2F5ymKmDW3hFf3n33iLN00S4LcxXVsdB8nvAmY3O5sGooi%2BIK8S8DO">查看详情>></a></p>
+          <p style="color:red">12月29日 10:00 特卖羽绒外套 限量50件！ <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203021007&idx=2&sn=cddb8fcbb69e9fc56e275d7f010e1784&scene=1&key=2f5eb01238e84f7eca54426ea636c62fa9292c8643941103e4750a46c82efbe7f9c6dd9c9d1d128b94392a074aec27c2&ascene=1&uin=MjE3MjYxNTA0MQ%3D%3D&devicetype=webwx&version=70000001&pass_ticket=RjgcZfi50Qi%2F5ymKmDW3hFf3n33iLN00S4LcxXVsdB8nvAmY3O5sGooi%2BIK8S8DO">查看详情>></a></p>
 	  <!--{% if referal_images|length > 0 %}
           <p>亲，有<font style="color:orange;font-size:20px">{{ referal_images|length }}</font>位好友在期盼您的感恩礼包！</p>
           <p>
@@ -37,6 +38,7 @@
     </div>
   </div>
 
+<!--
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">上期感恩活动产品展示</div>
     <div class="panel-body">
@@ -90,7 +92,7 @@
 	</div>
     </div>
   </div>
-  
+  -->
 
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">历史中奖名单公示</div>
