--- a/shopmanager/shopapp/weixin/templates/weixin/vipcoupon.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/vipcoupon.html
@@ -27,14 +27,9 @@
 
       <div id="id_coupon" class="row" style="margin-top:10px;display:none">
 	<div class="col-xs-12">
-	  <p>亲，您将获得双十一微信粉丝专属优惠券：</p>
-	  <p>1) <font style="color:red;">限量50元</font>优惠券。领券后，双十一当日到天猫【优尼世界旗舰店】拍下任意产品，付款<font style="color:red;font-size:20px">立减50元！</font></p>
-	  <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
-	  <a href="#" class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLv3mjZZAzCvUDEPccQCMA3cmiag2XQfWhxCdPfpzfdRrBaFJ2FIq0OnH825VMwQkS9oDIW8avzwyoQ/0k" alt="...">
-	  </a>
-	  <p>亲也可直接<a href="/weixin/clickscore/7/" style="font-size:20px">点击这里领取>></a> (点击后，请复制到浏览器打开）。</p>
-	  <p>2) 小小派睡袋50元优惠券：<a href="http://shop.m.taobao.com/shop/coupon.htm?sellerId=174265168&activityId=153646699" style="font-size:20px">点击领取>></a></p>
+	  <p>亲，您将获得满99减10元通用优惠券：</p>
+	  <p>1) 领券后，到天猫【优尼世界旗舰店】拍下任意产品，满99元付款<font style="color:red;font-size:20px">立减10元！</font></p>
+	  <p>亲可直接<a href="http://taoquan.taobao.com/coupon/unify_apply.htm?sellerId=174265168&activityId=209356155" style="font-size:20px">点击这里领取>></a> (点击后，请复制到浏览器打开）。</p>
 	  <p style="color:red">关于优惠券使用事宜，您也可以咨询我们的天猫客服、微信客服。</p>
 	</div>
       </div>
