--- a/shopmanager/shopapp/weixin/templates/weixin/orderinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/orderinfo.html
@@ -62,7 +62,7 @@
           <p>亲，<font style="color:red">确认收货</font>好评后30分钟，返现申请入口就会开放哦！</p>
           {% endif %}
         {% else %}
-	  {% if score_refund %}
+	  {% if score_refund or post_fee_refund %}
           {% include "weixin/refundapply.html" %}
 	  {% endif %}
 	{% endif %}
@@ -118,7 +118,7 @@
 
 <script type="text/javascript">
   function refundSelection(obj) {
-    if (obj.value == "1" || obj.value == "2" || obj.value == "3" || obj.value == "4") {
+    if (obj.value == "1" || obj.value == "2" || obj.value == "3" || obj.value == "4" || obj.value == "5") {
       var vipcode = $("#id_vip_code");
       if (vipcode.css("display") == "none") {
         vipcode.css("display","block");
