--- a/shopmanager/shopback/trades/templates/trades/timer_order_statistic_chart.html
+++ b/shopmanager/shopback/trades/templates/trades/timer_order_statistic_chart.html
@@ -8,7 +8,7 @@
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="{{ STATIC_URL }}css/table.less" rel="stylesheet/less" type="text/css">
     <script src="{{ STATIC_URL }}script/less.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" /> 
+    <link rel="stylesheet" href="{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css" /> 
     
 	<script src='{{ STATIC_URL }}script/jquery-1.7.1.min.js' type= 'text/javascript'></script>
 	<script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
