--- a/shopmanager/shopback/trades/templates/trades/trade_products_statistic.html
+++ b/shopmanager/shopback/trades/templates/trades/trade_products_statistic.html
@@ -7,9 +7,9 @@
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
     <link href="{{ STATIC_URL }}jquery-timepicker-addon/timepicker/jquery-ui-timepicker-addon.css" type="text/css" />
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
-	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-	<script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+    <link rel="stylesheet" href="{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css" />
+	<script src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js"></script>
+	<script src="{{ STATIC_URL }}jquery/jquery-ui-1.8.13.min.js"></script>
 	<script src="{{ STATIC_URL }}jquery-timepicker-addon/timepicker/jquery-ui-timepicker-addon.js" type="text/javascript"></script>
 	<!-- <script src="{{ STATIC_URL }}jquery-timepicker-addon/js/jquery.ui.datepicker-zh-CN.js.js" type="text/javascript" charset="gb2312"></script> -->
     <script src="{{ STATIC_URL }}jquery-timepicker-addon/js/jquery-ui-timepicker-zh-CN.js" type="text/javascript"></script> 
@@ -38,7 +38,7 @@
 	{% with object.trade_items as trade_items %}
 	<div class="container">
 		<div >
-			<form  class="form-inline" method="POST" action="/trades/order/statistic/" >
+			<form  class="form-inline" method="GET" action="/trades/order/statistic/" >
 			<ul>
 				<li>
 					<label class="control-label" for="sc_by">日期类型:</label>
