--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples2.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples2.html
@@ -8,10 +8,18 @@
 <div class="container-fluid">
 
 <div class="panel panel-default" style="margin-top:5px"> 
-  <div class="panel-heading" style="color:orange">十二月：超值特卖</div>
+  <div class="panel-heading" style="color:orange">免费试用</div>
   <div class="panel-body">
-    <p style="color:red">12月25日 10:00 特卖防风抱被 限量50件！ <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203021007&idx=1&sn=7bab410c22935cd6e94ee867854f353b&scene=1&key=2f5eb01238e84f7eccbffcb7302fe79fc0308b18f55b03dff952e0843d8cc98d50ef6db694815eca1f8703914ca83174&ascene=1&uin=MjE3MjYxNTA0MQ%3D%3D&devicetype=webwx&version=70000001&pass_ticket=RjgcZfi50Qi%2F5ymKmDW3hFf3n33iLN00S4LcxXVsdB8nvAmY3O5sGooi%2BIK8S8DO">查看详情>></a></p>
-    <p style="color:red">12月29日 10:00 特卖羽绒外套 限量50件！ <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203021007&idx=2&sn=cddb8fcbb69e9fc56e275d7f010e1784&scene=1&key=2f5eb01238e84f7eca54426ea636c62fa9292c8643941103e4750a46c82efbe7f9c6dd9c9d1d128b94392a074aec27c2&ascene=1&uin=MjE3MjYxNTA0MQ%3D%3D&devicetype=webwx&version=70000001&pass_ticket=RjgcZfi50Qi%2F5ymKmDW3hFf3n33iLN00S4LcxXVsdB8nvAmY3O5sGooi%2BIK8S8DO">查看详情>></a></p>
+  	<p>
+    <p style="color:red">1月5日 10:00 特卖宝宝羊绒衫 限量50件！ <a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uC_ox1npHc-Ry4LI-AcVqYE&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">查看详情>></a></p>
+  </div>
+</div>
+
+<div class="panel panel-default" style="margin-top:5px"> 
+  <div class="panel-heading" style="color:orange">羊年首献 超值特卖</div>
+  <div class="panel-body">
+    <p style="color:red">1月5日 10:00 特卖宝宝羊绒衫 限量50件！ <a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uC_ox1npHc-Ry4LI-AcVqYE&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">查看详情>></a></p>
+    <p style="color:red">1月12日 10:00 特卖天鹅绒睡袋 限量50件！ <a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uB3JfMbnDSzLvX5e_jltp_4&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">查看详情>></a></p>
   </div>
 </div>
 
