--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples2.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples2.html
@@ -10,8 +10,7 @@
 <div class="panel panel-default" style="margin-top:5px"> 
   <div class="panel-heading" style="color:orange">免费试用</div>
   <div class="panel-body">
-  	<p>
-    <p style="color:red">1月5日 10:00 特卖宝宝羊绒衫 限量50件！ <a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uC_ox1npHc-Ry4LI-AcVqYE&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">查看详情>></a></p>
+  	<p>新年大礼，200件斗篷免费送，即将开始！请点击 <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203259157&idx=2&sn=e9e5a55ddd9525cc20c92b17d63778c7#rd">查看详情>></a></p>
   </div>
 </div>
 
