--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples2.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples2.html
@@ -17,8 +17,8 @@
 <div class="panel panel-default" style="margin-top:5px"> 
   <div class="panel-heading" style="color:orange">羊年首献 超值特卖</div>
   <div class="panel-body">
-    <p style="color:red">1月5日 10:00 特卖宝宝羊绒衫 限量50件！ <a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uC_ox1npHc-Ry4LI-AcVqYE&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">查看详情>></a></p>
-    <p style="color:red">1月12日 10:00 特卖天鹅绒睡袋 限量50件！ <a href="http://mp.weixin.qq.com/bizmall/malldetail?id=&pid=pMt59uB3JfMbnDSzLvX5e_jltp_4&biz=MzA5NTI1NjYyNg==&scene=&action=show_detail&showwxpaytitle=1#wechat_redirect">查看详情>></a></p>
+    <p style="color:red">1月5日 10:00 特卖宝宝羊绒衫 限量50件！ <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203259157&idx=1&sn=f397575d64a34dc8630c2df30125554f#rdt">查看详情>></a></p>
+    <p style="color:red">1月12日 10:00 特卖天鹅绒睡袋 限量50件！ <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203259157&idx=3&sn=b17aacff46efc7ed10fa0468b418a9e0#rd">查看详情>></a></p>
   </div>
 </div>
 
