--- a/shopmanager/shopback/trades/templates/trades/timer_order_statistic_chart.html
+++ b/shopmanager/shopback/trades/templates/trades/timer_order_statistic_chart.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css" /> 
     
 	<script src='{{ STATIC_URL }}script/jquery-1.7.1.min.js' type= 'text/javascript'></script>
-	<script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+	<script src="{{ STATIC_URL }}jquery/jquery-ui-1.8.13.min.js"></script>
 	<script src='{{ STATIC_URL }}script/highcharts.js' type= 'text/javascript'></script>
     <style type="text/css">
 		*{ margin:0; padding:0;}
