--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples2.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples2.html
@@ -17,7 +17,7 @@
 <div class="panel panel-default" style="margin-top:5px"> 
   <div class="panel-heading" style="color:orange">羊年首献 超值特卖</div>
   <div class="panel-body">
-    <p style="color:red">1月5日 10:00 特卖宝宝羊绒衫 限量50件！ <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203259157&idx=1&sn=f397575d64a34dc8630c2df30125554f#rdt">查看详情>></a></p>
+    <p style="color:red"><del>1月5日 10:00 特卖宝宝羊绒衫 限量50件！ <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203259157&idx=1&sn=f397575d64a34dc8630c2df30125554f#rdt">查看详情>></del></a></p>
     <p style="color:red">1月12日 10:00 特卖天鹅绒睡袋 限量50件！ <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203259157&idx=3&sn=b17aacff46efc7ed10fa0468b418a9e0#rd">查看详情>></a></p>
   </div>
 </div>
@@ -83,6 +83,7 @@
   </div>
 </div>
 
+<!--
 <div class="row">
   <div class="col-xs-12">
     <h5 style="color:#3071a9">常见问题</h5>
@@ -93,7 +94,7 @@
     <p>5) 哪些人无需邀请码申请？<font style="color:red">在10月1日之前关注优尼世界的微信粉丝，或者曾经提交过试用申请的粉丝，都无需输入F码！</font></p>
   </div>
 </div>
-
+-->
 
 <div class="footer">
   <p>© Uni Littles 2014</p>
