--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -7,35 +7,11 @@
 <div class="container-fluid">
 
   <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading" style="color:orange">十二月 特卖季</div>
+    <div class="panel-heading" style="color:orange">免费试用</div>
     <div class="panel-body">
-      <div class="row">
-	<div class="col-xs-12">
-          <p style="color:red">12月25日 10:00 特卖防风抱被 限量50件！ <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203021007&idx=1&sn=7bab410c22935cd6e94ee867854f353b&scene=1&key=2f5eb01238e84f7eccbffcb7302fe79fc0308b18f55b03dff952e0843d8cc98d50ef6db694815eca1f8703914ca83174&ascene=1&uin=MjE3MjYxNTA0MQ%3D%3D&devicetype=webwx&version=70000001&pass_ticket=RjgcZfi50Qi%2F5ymKmDW3hFf3n33iLN00S4LcxXVsdB8nvAmY3O5sGooi%2BIK8S8DO">查看详情>></a></p>
-          <p style="color:red">12月29日 10:00 特卖羽绒外套 限量50件！ <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203021007&idx=2&sn=cddb8fcbb69e9fc56e275d7f010e1784&scene=1&key=2f5eb01238e84f7eca54426ea636c62fa9292c8643941103e4750a46c82efbe7f9c6dd9c9d1d128b94392a074aec27c2&ascene=1&uin=MjE3MjYxNTA0MQ%3D%3D&devicetype=webwx&version=70000001&pass_ticket=RjgcZfi50Qi%2F5ymKmDW3hFf3n33iLN00S4LcxXVsdB8nvAmY3O5sGooi%2BIK8S8DO">查看详情>></a></p>
-	  <!--{% if referal_images|length > 0 %}
-          <p>亲，有<font style="color:orange;font-size:20px">{{ referal_images|length }}</font>位好友在期盼您的感恩礼包！</p>
-          <p>
-            {% for images in referal_images %}
-            <img src="{{ images }}" width="20px" height="20px"/>
-            {% endfor %}
-          </p>
-	  {% else %}
-	  <p style="color:orange">亲，还没有人使用您的F吗哦。</p>
-	  <p style="color:red">把F码分享给好友，您就可以给她发感恩礼包啦！</p>
-	  {% endif %}-->
-        </div>
-      </div>
-      <div class="row">
-	<!--<div class="col-xs-12" style="text-align:center">
-	  {% if my_award and my_award.is_share %}
-	  	<p style="color:#d9534f">您已完成感恩礼包发送。记得让好友来领！ <a href="/weixin/sampleads/{{ wx_user.pk }}/">分享朋友圈>></a></p>
-	  {% else %}
-        <p><a href="/weixin/sales/award/notify/" class="btn btn-warning">立即发礼包 >></a></p>
-	  {% endif %}
-        </div>-->
-      </div>
+      <p>新年大礼，200件斗篷免费送，即将开始！请点击 <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203259157&idx=2&sn=e9e5a55ddd9525cc20c92b17d63778c7#rd">查看详情>></a></p>
     </div>
+
   </div>
 
 <!--
@@ -106,7 +82,7 @@
   </div>
   
   <div class="footer">
-    <p>© Uni Littles 2014</p>
+    <p>© Uni Littles 2015</p>
   </div>
   
 </div>
