--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -8,144 +8,91 @@
 <div class="container-fluid">
 
   <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading" style="color:orange">9月答题赢积分活动（截止9月30日）</div>
-    <div class="panel-body">
-      <div class="row">
-	<div class="col-xs-12">
-	  <a href="#" class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs3fFxcBMRZsmProgXkuSPF4esicxuYzMibQhriaicJFXdntMnicPf5cfQjNNibWUF8BJRn1RLURwOUmLKw/0" alt="...">
-	  </a>
-	  <p>优尼美妈们：</p>
-	  <p>优尼世界积分系统正式上线啦！</p>
-	  <p>9月答题赢积分，可用积分<font style="color:red;font-size:20px">折上再5折换购</font>小小派睡袋哦！（注：所有尺寸款式均5折! 每天仅限积分排名前100位！）</p>
-	  <p style="color:red">悄悄告诉您：邀请好友答题，可赢更多积分哦！</p>
-	</div>
-      </div>
-      <div class="row">
-	<div class="col-xs-12" style="text-align:center; margin-top:10px">
-	  <p style="font-size:20px"><a href="/weixin/scoremenu/">查看详细积分规则>></a></p>
-	</div>
-      </div>
-      <div class="row">
-	<div class="col-xs-12" style="text-align:center; margin-top:10px">
-	  <a class="btn btn-warning" href="/weixin/examination/share/{{ pk }}/">点击进入答题挑战 >></a>
-	</div>
-      </div>
-    </div>
-  </div>
-
-{% for sample in samples %}
-
-  <div class="panel panel-default" style="margin-top:5px">
-  <div class="panel-heading" style="color:orange">免费试用：{{ sample.name }}</div>
+  <div class="panel-heading" style="color:orange">免费试用：时尚婴童斗篷</div>
   <div class="panel-body">
     
     <form action="/weixin/sampleapply/" method="post" onsubmit="return check()" class="form-group">{% csrf_token %}
-      <input type="hidden" value="{{ sample.pk }}" name="sample_pk"/>
+      <input type="hidden" value="2" name="sample_pk"/>
+      <div class="row">
+	<div class="col-xs-12" style="text-align:center">
+	  <p><a href="http://mp.weixin.qq.com/bizmall/mallshelf?id=&t=mall/list&biz=MzA5NTI1NjYyNg==&shelf_id=2&showwxpaytitle=1#wechat_redirect">查看商品详情 >></a></p>
+	</div>
+      </div>
       <div class="row">
 	<div class="col-xs-6" style="text-align:center">
-	  <p><a href="{{ sample.sale_url }}">查看商品详情</a></p>
-	  <a href="{{ sample.sale_url }}" class="thumbnail">
-	    <img src="{{ sample.pic_url }}" alt="...">
+	  <a href="" class="thumbnail">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtMTpiclRQJZ7aBpwKS3xsvU0Hv1Pc7bCliadwlHAa9z5zxDzB5OvRphHcb5X103Zu8g3cSkZz5RjsA/0" alt="...">
 	  </a>
+	  <p style="color:#029fd6">选择一：蓝底动物</p>
+	</div>
+	<div class="col-xs-6" style="text-align:center">
+	  <a href="" class="thumbnail">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtMTpiclRQJZ7aBpwKS3xsvUfibrEhY3L4kErCdEyV2MfkHrHov2XsB0I0HAkibf72HVz9eUZb5vo9cQ/0" alt="...">
+	  </a>
+	  <p style="color:#029fd6">选择二：黄底小熊</p>
+ 	</div>
+      </div>
+      <div class="row" style="margin-top:10px">
+	<div class="col-xs-2"></div>	  
+	<div class="col-xs-8" style="text-align:center">
 
+	  <!--
 	  {% if today_orders > 1000 %}
 	  <p>超过<font style="color:red; font-size:20px">1000</font>人已申请</p>
 	  {% else %}
 	  <p>今日<font style="color:red; font-size:20px">{{ today_orders }}</font>人已申请</p>
 	  {% endif %}
-	</div>
-
-	<div class="col-xs-6">
-	  <p>款式：
-	    <select class="form-control input-sm" name="color" id="id_color">
-	      <option value="0">选择</option>
-	      <option value="03">彩色乐园</option>
-	      <option value="02">蓝色动物</option>
-	      <option value="01">黄色小熊</option>
-	    </select>
-	    <input type="hidden" name="size" value="1">
-	    <input type="hidden" name="weight" value="0">
-	  </p>
-	  {% if False %}
-	  <p>尺寸：
-	    <select class="form-control input-sm" name="size" id="id_size">
-	      <option value="0">选择</option>
-	      <option value="1">90cm</option>
-	      <option value="2">120cm</option>
+	  -->
+	  <p>款式选择：
+	    <select class="form-control" name="selection" id="id_selection">
+	      <option value="1">蓝底动物</option>
+	      <option value="2">黄底小熊</option>
 	    </select>
 	  </p>
-	  <p>厚度：
-	    <select class="form-control input-sm" name="weight" id="id_weight">
-	      <option value="0">选择</option>
-	      <option value="1">春秋薄款</option>
-	      <option value="3">春秋加厚款</option>
-	    </select>
-	  </p>
-	  {% endif %}
 	  
-          {% if vip_exists %}
-          <p style="color:red">优尼美妈忠粉,无需邀请码即可申请!</p>
-	  <input class="form-control" type="text" placeholder="无需VIP邀请码" {% if vipcode %} value="{{ vipcode }}" {% endif %} id="id_vipcode" status="1" disabled="disabled" name="vipcode"/>
-	  <input type="hidden" name="vip_exists" value="1">
-	  {% else %}
-          <p>邀请码：</p>
-	  <input class="form-control" type="text" placeholder="VIP邀请码" id="id_vipcode" status="0" name="vipcode"/>
-	  <input type="hidden" name="vip_exists" value="0">
-	  {% endif %}
+          <p style="margin-top:16px">输入F码：
+	  <input class="form-control" type="text" placeholder="F码" id="id_vipcode" status="0" name="vipcode"/>
+	  </p>
 	</div>
+	<div class="col-xs-2"></div>
       </div>
       
       <div class="row" style="text-align:center">
 	<p id="id_msg" style="text-align:center;color:red"></p>
-	{% if not user_isvalid %}
-	<p style="color:red">亲，申请需完善宝宝档案哦！<a href='https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/babyinfo/&response_type=code&scope=snsapi_base&state=135#wechat_redirect'>点击完善 >></a></p>
-	{% endif %}
-	{% if order_exists %}
-	<a href="/weixin/sampleads/{{ pk }}/">您的试用申请已经提交！查看 >></a>
-	{% else %}
-	<p id="id_redirect" style="text-align:center;color:red;"></p>
-	<div class="col-xs-12" style="text-align:center; margin-top:10px">
+	<div class="col-xs-12" style="text-align:center; margin-top:16px">
 	{% if started %}
 	  <input type="submit" class="btn btn-warning" value="提交试用申请"/>
         {% else %} 
 	  <button type="button" class="btn btn-warning" disabled="disabled">申请待开放...</button>
+	  <p style="color:red">请提前关注【齐悦母婴惠】，申请待开放！</p>
         {% endif %}
 	</div>
-	{% endif %}
-<!--
-	<p style="color:red">亲，到微信菜单【我的】->【宝宝档案】完善信息，绑定手机号码，<font style="font-size:20px">申请才会开放哦！</font></p>
--->
-      </div>
     </form>      
     
   </div>
 </div>
-{% endfor %}
+
 
 
 <div class="row">
   <div class="col-xs-12">
     <h5 style="color:#3071a9">申请须知</h5>
-    <p>1) 申请试用前，请到微信菜单【我的】->【宝宝档案】完善信息，以便我们审核申请和邮寄产品给宝宝。</p>
-    <p style="color:orange">2) 申请之后，您会得到一个带VIP邀请码的专属页面，分享到您的朋友圈，会大大提高您的选中几率！</p>
-    <p>3) 若您有过购买记录、晒单记录、好评记录、或邀请好友记录，系统会优先审核您的申请。</p>
-    <p>4) 审核结果将在【活动中心】->【审核通知】页面显示，请每天查阅。若审核通过，会有<font style="color:red">红色醒目提示</font>！</p>
+    <p style="color:orange">1) 申请提交完成的页面，有您的专属F码，分享到朋友圈，会大大提高您的中奖几率！</p>
+    <p>2) 若您有过购买记录、晒单记录、好评记录、或邀请好友记录，系统会优先审核您的申请。</p>
+    <p>3) 审核结果将在【活动中心】->【审核通知】页面显示，请查阅。<font style="color:red">分数越高，中奖几率越大！</font>！</p>
   </div>
 </div>
 
 <div class="row">
   <div class="col-xs-12">
     <h5 style="color:#3071a9">常见问题</h5>
-    <p>1) VIP邀请码在哪里? <font style="color:red">在您看到的微信帖子里面, 请阅读寻找！也可向申请过的朋友索要VIP邀请码。</font></p>
-    <p>2) 我收不到手机验证码? <font style="color:red">微信中输入0，根据提示操作。若一份钟没收到短信验证码，可以重复。</font></p>
-    <p>3) 哪些人无需邀请码申请？<font style="color:red">在8月15日之前关注优尼世界的微信粉丝，或者曾经提交过试用申请的粉丝，都无需输入VIP邀请码！</font></p>
+    <p>1) F码在哪里? <font style="color:red">在您看到的微信帖子里面, 请阅读寻找！也可向申请过的朋友索要F码。</font></p>
   </div>
 </div>
 
 
 <div class="footer">
-  <p>© Uni Littles 2014</p>
+  <p>© Uni Littles 2015</p>
 </div>
 
 </div>
@@ -153,34 +100,20 @@
 
 {% block tail_script %}
 <script type="text/javascript">
+
   function validateVipCode(s) {
   var validateReg = /^\d{6,7}$/;
   return validateReg.test(s);
   };
 
   function check() {
-    {% if not user_isvalid %}
-    var redirect = $("#id_redirect");
-    redirect[0].innerHTML = "亲，完善宝宝档案及验证手机号码，才能提交申请哦。<a href='https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/babyinfo/&response_type=code&scope=snsapi_base&state=135#wechat_redirect'>点击完善 >></a>";
-    return false;
-    {% else %}
-    var color = $("#id_color").val();
-    var size = $("#id_size").val();
-    var weight = $("#id_weight").val();
     var vipcode = $("#id_vipcode").val();  
-    var vip_status = $("#id_vipcode").attr("status");
 
-    var msg = $("#id_msg");
-    if (color == "0" || size == "0" || weight == "0") {
-      msg[0].innerHTML = "亲，请选择您喜欢的款式！";
-      return false;
-    }
-
-    if (vip_status == "0" && validateVipCode(vipcode) == false) {
+    if (validateVipCode(vipcode) == false) {
       msg[0].innerHTML = "请检查您的VIP邀请码(6-7位数字)!";
       return false;
     }
-    {% endif %}
+
   };
 </script>
 {% endblock %}
