--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -11,8 +11,6 @@
   <div class="panel-heading" style="color:orange">免费试用：时尚婴童斗篷</div>
   <div class="panel-body">
     
-    <form action="/weixin/sampleapply/" method="post" onsubmit="return check()" class="form-group">{% csrf_token %}
-      <input type="hidden" value="2" name="sample_pk"/>
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
 	  <p><a href="http://mp.weixin.qq.com/bizmall/mallshelf?id=&t=mall/list&biz=MzA5NTI1NjYyNg==&shelf_id=2&showwxpaytitle=1#wechat_redirect">查看商品详情 >></a></p>
@@ -32,6 +30,10 @@
 	  <p style="color:#029fd6">选择二：黄底小熊</p>
  	</div>
       </div>
+
+    <form action="/weixin/sampleapply/" method="post" onsubmit="return check()" class="form-group">{% csrf_token %}
+      <input type="hidden" value="2" name="sample_pk"/>
+
       <div class="row" style="margin-top:10px">
 	<div class="col-xs-2"></div>	  
 	<div class="col-xs-8" style="text-align:center">
@@ -45,13 +47,13 @@
 	  -->
 	  <p>款式选择：
 	    <select class="form-control" name="selection" id="id_selection">
-	      <option value="1">蓝底动物</option>
-	      <option value="2">黄底小熊</option>
+	      <option value="1">黄底小熊</option>
+	      <option value="2">蓝底动物</option>
 	    </select>
 	  </p>
 	  
           <p style="margin-top:16px">输入F码：
-	  <input class="form-control" type="text" placeholder="F码" id="id_vipcode" status="0" name="vipcode"/>
+	  <input class="form-control" type="text" placeholder="F码" id="id_vipcode" name="fcode" value="{{ fcode }}"/>
 	  </p>
 	</div>
 	<div class="col-xs-2"></div>
@@ -108,12 +110,13 @@
 
   function check() {
     var vipcode = $("#id_vipcode").val();  
-
+    var msg = $("#id_msg");
     if (validateVipCode(vipcode) == false) {
-      msg[0].innerHTML = "请检查您的VIP邀请码(6-7位数字)!";
+
+      msg[0].innerHTML = "错误的F码 (6-7位数字)!";
       return false;
     }
-
+    return true;
   };
 </script>
 {% endblock %}
